--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/img/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
+    <meta name="description" content="E-commerce website built by front-end developer Yahia Abukhalifa by react js and css">
+    <meta name="keywords" content="E-commerce, Yahia Abukhalifa, clothes store">
+    <link rel="canonical" href="https://e-commerce-lac-eight.vercel.app/">
+    <meta http-equiv="Content-Language" content="ar">
+    <meta property="og:title" content="Your Page Title">
+    <meta property="og:description" content="E-commerce website built by front-end developer Yahia Abukhalifa by react js and css">
+    <meta property="og:image" content="./src/assets/img/logo.jpg">
+    <meta property="og:url" content="https://e-commerce-lac-eight.vercel.app/">
+
   </head>
   <body>
     <div id="root"></div>
