--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="E-commerce, Yahia Abukhalifa, clothes store">
     <link rel="canonical" href="https://e-commerce-lac-eight.vercel.app/">
     <meta http-equiv="Content-Language" content="ar">
-    <meta property="og:title" content="Your Page Title">
+    <meta property="og:title" content="E-commerce">
     <meta property="og:description" content="E-commerce website built by front-end developer Yahia Abukhalifa by react js and css">
     <meta property="og:image" content="./src/assets/img/logo.jpg">
     <meta property="og:url" content="https://e-commerce-lac-eight.vercel.app/">
